# ExecOps

./: .env.example  .gitignore  CLAUDE_INSTRUCTIONS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  exec_ops.md  founderos.md  integration-test.sh  prd.md  start.sh
ai-service/: .env.example  README.md  README.md.new  pyproject.toml  template.yaml  test-setup.sh  test_connections.py
ai-service/.deepeval/: .deepeval_telemetry.txt
ai-service/loadtest/: locustfile.py
ai-service/scripts/: test_sentinel_e2e.py
ai-service/src/: __init__.py
ai-service/src/ai_service/: __init__.py  lambda_handler.py  main.py  observability.py
ai-service/src/ai_service/agent/: __init__.py  nodes.py  state.py  supervisor.py  workflow.py
ai-service/src/ai_service/analytics/: __init__.py  generator.py  llm_router.py  query_router.py
ai-service/src/ai_service/evals/: metrics.py  test_golden_cases.py
ai-service/src/ai_service/graphs/: __init__.py  customer_fire.py  release_hygiene.py  runway_money.py  sop_graph.py  team_pulse.py  vertical_agents.py
ai-service/src/ai_service/infrastructure/: __init__.py  (+1 more)
ai-service/tests/: __init__.py  conftest.py  test_sentinel.py  test_sop_graph.py
ai-service/tests/integration/: test_cfo_agent.py  test_cto_agent.py  test_github_sentinel.py  test_guardrails_e2e.py  test_human_approval.py  test_observability.py  test_slack_integration.py  test_stripe_integration.py  test_supervisor.py  test_tech_debt_agent.py  test_vertical_agents.py
ai-service/tests/unit/: test_semantic_memory.py  test_temporal_memory.py
(+58 files in other folders)
